fix spacing

--- a/css/stylingCOP.css
+++ b/css/stylingCOP.css
@@ -305,9 +305,9 @@
                  }
                  #bottomButton{ 
                      float: none;
-                     position: relative;
-                     left: -10px;
-                     top:440px;
+                     position: absolute;
+                     left: 0px;
+                     top: 2470px;
                      margin-left: 30px;
                      width: 250px;
                  }
@@ -325,7 +325,7 @@
                  #payment {
                      position: relative;
                      left: -20px;
-                     top: 1200px;
+                     top: 1420px;
                      background-color: white;
                      padding-left: 30px;
                      margin-left: 0;
